--- a/portfolio/public/index.html
+++ b/portfolio/public/index.html
@@ -9,6 +9,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=El+Messiri:wght@400..700&display=swap" rel="stylesheet">
+    <link href="https://fontawesome.com/icons/angles-left?f=classic&s=duotone">
+    <link href="https://fontawesome.com/icons/angles-right?f=classic&s=duotone"/>
+    <link href="https://fontawesome.com/icons/moon?f=classic&s=solid"/>
+    <link href="https://fontawesome.com/icons/sun?f=classic&s=solid"/>
+
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
