--- a/portfolio/public/index.html
+++ b/portfolio/public/index.html
@@ -24,8 +24,12 @@
       name="description"
       content="portfolio Margaux Doisy dévelopeuse web"
     />
-    
-    <title>Margaux Doisy</title>
+
+      <script src="https://www.google.com/recaptcha/api.js?render=VOTRE_SITE_KEY"></script>
+
+
+
+      <title>Margaux Doisy</title>
   </head>
   <body>
     <div id="root"></div>
